<?xml version="1.0"?>
<package format="3">
  <name>rebroadcast_tools</name>
  <version>0.1.0</version>
  <description>Unified ROS 2 topic rebroadcaster toolkit</description>
  <maintainer email="jjiang127@connect.hkust-gz.edu.cn">Eku127</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
